[gd_scene load_steps=2 format=3 uid="uid://dsual2g502hn1"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_xuxsa"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xuxsa")

[node name="disconnect" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.458333
anchor_top = 0.558642
anchor_right = 0.614583
anchor_bottom = 0.641975
offset_right = -86.0
offset_bottom = -23.0
text = "Disconnect"
metadata/_edit_use_anchors_ = true

[node name="Mute" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.392361
anchor_top = 0.472222
anchor_right = 0.583333
anchor_bottom = 0.530864
offset_right = -98.0
offset_bottom = -7.0
text = "Mute Sound
"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.391493
anchor_top = 0.391975
anchor_right = 0.522569
anchor_bottom = 0.458333
metadata/_edit_use_anchors_ = true

[node name="Slider label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master:"

[node name="sound slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="pressed" from="disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="toggled" from="Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="VBoxContainer/sound slider" to="." method="_on_sound_slider_value_changed"]
